--- a/CCLE_VIF_analysis/CCLE_virus_content_and_insertion_analysis.Rmd
+++ b/CCLE_VIF_analysis/CCLE_virus_content_and_insertion_analysis.Rmd
@@ -576,7 +576,7 @@ ggsave(virus_median_mapped_all_plot, file="CCLE_virus_median_mapped_all_plot.pdf
 
 
 virus_median_mapped_by_tissue_id_plot = virus_median_mapped_by_tissue_id  %>% 
-  filter(! grepl("Cells_EBV", tissue_id)) %>%
+  #filter(! grepl("Cells_EBV", tissue_id)) %>%
   ggplot(aes(y=tissue_id, x=median_mapped, size=sample_count, color=virus)) +
   geom_point() + facet_wrap(~virus, scale='free', ncol=2)
 
